# sentinelx-soc-dashboard

./: .gitignore  README.md  index.html  tailwind.config.ts  text.txt  txt
.lovable/: plan.md
backend/: Dockerfile  README.md  pyproject.toml  render.yaml  requirements-core.txt  requirements-dev.txt  requirements-ml.txt  requirements.txt  sentinelx.db
backend/src/: config.py  security.py
backend/src/api/: main.py
backend/src/api/routes/: alerts.py  anomalies.py  assets.py  auth.py  ingest.py  integrations.py  logs.py  rules.py  settings.py  stats.py  threats.py
backend/src/database/: connection.py  models.py  seed.py  seed_demo.py
backend/src/ml/: README.md  feature_names.pkl  feature_scaler.pkl  inference.py  isolation_forest_model.pkl  label_encoders.pkl  train_anomaly_detector.py
backend/src/schemas/: ingest.py  responses.py
backend/src/sentinelx_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/services/: alert_service.py  auth_service.py  detection_service.py  ingest_queue.py  ingest_service.py  rule_engine.py
backend/tests/: test_ingest.py  test_rule_engine.py
src/: App.tsx  index.css
src/auth/: AuthContext.tsx  RequireAuth.tsx
src/components/soc/: AppSidebar.tsx  IngestTester.tsx  PageHeader.tsx  SeverityBadge.tsx  SocLayout.tsx
src/lib/: api.ts
src/mock/: data.ts  store.tsx
src/pages/: Auth.tsx
src/pages/soc/: Alerts.tsx  Analytics.tsx  Anomalies.tsx  Assets.tsx  Dashboard.tsx  Integrations.tsx  Logs.tsx  Rules.tsx  Settings.tsx  ThreatIntel.tsx
src/types/: soc.ts
